<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chat_rv_linear_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LandingScreen">

    <TextView
        android:id="@+id/chat_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/chat_header"
        android:textColor="@color/icons"
        android:gravity="center_horizontal"
        android:textSize="@dimen/material_text_headline"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/chat_rv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>

    <EditText
        android:id="@+id/message_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_message_hint"/>

    <Button
        android:id="@+id/send_chat_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendChat"
        android:text="@string/chat_send_message"/>

</LinearLayout>
