<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/individual_shout_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/button_ripple"
        android:elevation="8dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#CCC">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:background="@drawable/profilepic1"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/profile_picture"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="52dp"
                android:text="@string/username_placeholder"
                android:textColor="#FFF"
                android:textSize="30sp" />

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:text="@string/shout_description_placeholder"
                android:textSize="20sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/shout_internal_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="12dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:text="@string/distance_placeholder"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:text="@string/five_star_placeholder"
                android:textSize="20sp" />


        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
